--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -96,7 +96,7 @@ blockquote {
   margin: 2em 1em 2em 0;
   padding-left: 1em;
   padding-right: 1em;
-  font-style: italic;
+  font-style: normal;
   border-left: 0.25em solid $primary-color;
 
   cite {
@@ -140,8 +140,8 @@ td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size: $type-size-6;
-  background: $code-background-color;
-  border: 1px solid $lighter-gray;
+  background: $code-background-color-dark;
+  border: 1px solid $darker-gray;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
 
